--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -8,9 +8,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
 
-.bodymain .vv {
-  color: black;
-}
 .bodymain #mobilenav {
   padding: 16px;
   background: var(--header-background);
@@ -160,6 +157,7 @@ body {
   text-decoration: none;
   margin-left: 10px;
   white-space: nowrap;
+  font-weight: 600;
 }
 .bodymain #mainnav .header-left .navlink:hover {
   color: #ffffffb3;
@@ -242,4 +240,161 @@ body {
   position: relative;
   top: -9px;
   left: -12px;
+}
+.bodymain .datasect #mobilename {
+  padding: 0px 16px;
+  margin-bottom: 20px;
+}
+@media only screen and (min-width: 771px) {
+  .bodymain .datasect #mobilename {
+    display: none;
+  }
+}
+.bodymain .datasect #mobilename .userdetails {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+.bodymain .datasect #mobilename .userdetails .userdp {
+  width: 20%;
+}
+.bodymain .datasect #mobilename .userdetails .userdp .avatar {
+  width: 100%;
+  border-radius: 100%;
+}
+.bodymain .datasect #mobilename .userdetails .username {
+  margin-left: 5%;
+  width: 75%;
+  overflow: hidden;
+}
+.bodymain .datasect #mobilename .userdetails .username .name {
+  line-height: 1.25;
+  margin: 0px;
+  color: #24292e;
+}
+.bodymain .datasect #mobilename .userdetails .username .usernick {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 24px;
+  color: #586069;
+  margin: 0px;
+}
+.bodymain .datasect #mobilename .status {
+  color: #24292e;
+}
+.bodymain .datasect .tabsdiv {
+  margin-top: 24px;
+  display: flex;
+  border-bottom: 2px solid #eaecef;
+  box-sizing: border-box;
+}
+.bodymain .datasect .tabsdiv .fillup {
+  width: 25%;
+  margin-right: 3%;
+}
+@media only screen and (max-width: 771px) {
+  .bodymain .datasect .tabsdiv .fillup {
+    display: none;
+  }
+}
+.bodymain .datasect .tabsdiv .fillup p {
+  margin: 0px;
+}
+.bodymain .datasect .tabsdiv .tabsicon {
+  display: flex;
+  width: 75%;
+}
+@media only screen and (max-width: 771px) {
+  .bodymain .datasect .tabsdiv .tabsicon {
+    width: 100%;
+    overflow: scroll;
+  }
+}
+.bodymain .datasect .tabsdiv .tabsicon .selected {
+  font-weight: 600;
+  color: #24292e;
+  border-bottom: 4px solid #f9826c;
+  outline: 1px dotted transparent;
+}
+.bodymain .datasect .tabsdiv .tabsicon .tab {
+  display: flex;
+  padding: 8px 16px;
+  align-items: center;
+}
+.bodymain .datasect .tabsdiv .tabsicon .tab .tabicon {
+  width: 19px;
+}
+.bodymain .datasect .tabsdiv .tabsicon .tab .tabtitle {
+  white-space: nowrap;
+  margin: 0px;
+  font-size: 16px;
+  line-height: 30px;
+  margin-left: 7px;
+  color: #24292e;
+}
+.bodymain .datasect .tabsdiv .tabsicon .tab .tabtitle span {
+  margin-left: 4px;
+  color: #24292e;
+  background-color: rgba(209, 213, 218, 0.5);
+  min-width: 20px;
+  padding: 4px 11px;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 18px;
+  border-radius: 2em;
+}
+.bodymain .datasect .reposect {
+  display: flex;
+  box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1280px;
+}
+.bodymain .datasect .reposect .profiledata {
+  width: 25%;
+  margin-top: -32px;
+  margin-right: 3%;
+}
+@media only screen and (max-width: 771px) {
+  .bodymain .datasect .reposect .profiledata {
+    display: none;
+  }
+}
+.bodymain .datasect .reposect .profiledata .userdetails {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+  flex-direction: column;
+}
+.bodymain .datasect .reposect .profiledata .userdetails .userdp {
+  width: 100%;
+  margin-bottom: 20px;
+}
+.bodymain .datasect .reposect .profiledata .userdetails .userdp .avatar {
+  width: 100%;
+  border-radius: 100%;
+}
+.bodymain .datasect .reposect .profiledata .userdetails .username {
+  width: 100%;
+  overflow: hidden;
+}
+.bodymain .datasect .reposect .profiledata .userdetails .username .name {
+  line-height: 1.25;
+  margin: 0px;
+  color: #24292e;
+}
+.bodymain .datasect .reposect .profiledata .userdetails .username .usernick {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 24px;
+  color: #586069;
+  margin: 0px;
+}
+.bodymain .datasect .reposect .profiledata .status {
+  color: #24292e;
+}
+.bodymain .datasect .reposect .repositry {
+  width: 72%;
 }
