--- a/public/styles/profile.scss
+++ b/public/styles/profile.scss
@@ -9,9 +9,7 @@ body {
 }
 
 .bodymain {
-    .vv{
-        color: black;
-    }
+
     #mobilenav {
         @media only screen and (min-width: 771px) {
             display: none;
@@ -205,6 +203,7 @@ body {
                 text-decoration: none;
                 margin-left: 10px;
                 white-space: nowrap;
+                font-weight: 600;
             }
 
             .navlink:hover {
@@ -315,6 +314,194 @@ body {
                 left: -12px;
             }
         }
+    }
+
+    .datasect {
+        #mobilename {
+            @media only screen and (min-width: 771px) {
+                display: none;
+            }
+
+            padding: 0px 16px;
+
+            margin-bottom: 20px;
+
+            .userdetails {
+                display: flex;
+                align-items: center;
+                margin-bottom: 15px;
+
+                .userdp {
+                    width: 20%;
+
+                    .avatar {
+                        width: 100%;
+                        border-radius: 100%;
+                    }
+                }
+
+                .username {
+                    margin-left: 5%;
+                    width: 75%;
+                    overflow: hidden;
+
+                    .name {
+                        line-height: 1.25;
+                        margin: 0px;
+                        color: #24292e;
+                    }
+
+                    .usernick {
+                        font-size: 20px;
+                        font-style: normal;
+                        font-weight: 300;
+                        line-height: 24px;
+                        color: #586069;
+                        margin: 0px;
+                        // margin-top: 5px;
+                    }
+                }
+            }
+
+            .status {
+                color: #24292e;
+
+            }
+        }
+
+        .tabsdiv {
+            margin-top: 24px;
+            display: flex;
+            border-bottom: 2px solid #eaecef;
+            box-sizing: border-box;
+
+            .fillup {
+                width: 25%;
+                margin-right: 3%;
+                @media only screen and (max-width: 771px) {
+                    display: none;
+                }
+                p {
+                    margin: 0px;
+                }
+            }
+
+            .tabsicon {
+                display: flex;
+
+                width: 75%;
+                @media only screen and (max-width: 771px) {
+                    width: 100%;
+                    overflow:scroll
+                }
+                .selected {
+                    font-weight: 600;
+                    color: #24292e;
+                    border-bottom: 4px solid #f9826c;
+                    outline: 1px dotted transparent;
+                }
+
+                .tab {
+                    display: flex;
+                    padding: 8px 16px;
+                    align-items: center;
+
+                    .tabicon {
+                        width: 19px;
+                    }
+
+                    .tabtitle {
+
+                        white-space: nowrap;
+
+                        margin: 0px;
+                        font-size: 16px;
+                        line-height: 30px;
+                        margin-left: 7px;
+                        color: #24292e;
+
+                        span {
+                            margin-left: 4px;
+                            color: #24292e;
+                            background-color: rgba(209, 213, 218, 0.5);
+                            min-width: 20px;
+                            padding: 4px 11px;
+                            font-size: 12px;
+                            font-weight: 600;
+                            line-height: 18px;
+                            border-radius: 2em;
+                        }
+                    }
+                }
+            }
+        }
+
+        .reposect {
+            display: flex;
+            box-sizing: border-box;
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 1280px;
+
+            .profiledata {
+                @media only screen and (max-width: 771px) {
+                    display: none;
+                }
+                width: 25%;
+                margin-top: -32px;
+                margin-right: 3%;
+                .userdetails {
+                    display: flex;
+                    align-items: center;
+                    margin-bottom: 15px;
+                    flex-direction: column;
+
+                    .userdp {
+                        width: 100%;
+                        margin-bottom: 20px;
+
+                        .avatar {
+                            width: 100%;
+                            border-radius: 100%;
+                        }
+                    }
+
+                    .username {
+                        width: 100%;
+                        overflow: hidden;
+
+                        .name {
+                            line-height: 1.25;
+                            margin: 0px;
+                            color: #24292e;
+                        }
+
+                        .usernick {
+                            font-size: 20px;
+                            font-style: normal;
+                            font-weight: 300;
+                            line-height: 24px;
+                            color: #586069;
+                            margin: 0px;
+                            // margin-top: 5px;
+                        }
+                    }
+                }
+
+                .status {
+                    color: #24292e;
+
+                }
+            }
+
+            .repositry {
+                width: 72%;
+
+            }
+        }
+
+
+
     }
 
 }
