--- a/public/styles/profile.scss
+++ b/public/styles/profile.scss
@@ -447,6 +447,8 @@ body {
                 @media only screen and (max-width: 771px) {
                     display: none;
                 }
+
+                padding: 0px 32px;
                 width: 25%;
                 margin-top: -32px;
                 margin-right: 3%;
