--- a/public/styles/profile.scss
+++ b/public/styles/profile.scss
@@ -359,6 +359,7 @@ body {
                         color: #586069;
                         margin: 0px;
                         // margin-top: 5px;
+                        margin-left: 3px;
                     }
                 }
             }
@@ -371,9 +372,16 @@ body {
 
         .tabsdiv {
             margin-top: 24px;
-            display: flex;
+          
             border-bottom: 2px solid #eaecef;
             box-sizing: border-box;
+
+            .firstinner {
+                margin-left: auto;
+                margin-right: auto;
+                max-width: 1280px;
+                display: flex;
+            }
 
             .fillup {
                 width: 25%;
@@ -391,7 +399,7 @@ body {
             .tabsicon {
                 display: flex;
                 cursor: pointer;
-                width: 75%;
+                width: 72%;
 
                 @media only screen and (max-width: 771px) {
                     width: 100%;
@@ -455,7 +463,7 @@ body {
                 padding: 0px 32px;
                 width: 25%;
                 margin-top: -32px;
-                margin-right: 3%;
+                // margin-right: 3%;
 
                 .userdetails {
                     display: flex;
@@ -503,6 +511,67 @@ body {
 
             .repositry {
                 width: 72%;
+                @media only screen and (max-width: 771px) {
+                    width:100%;
+                    padding: 0px 16px;
+                }
+                .inputdiv {
+                    margin-top: 16px;
+                    margin-bottom: 16px;
+                    .findrepo {
+                        width: 100%;
+                        border-bottom: 1px solid #e1e4e8;
+                        padding-bottom: 10px;
+                        .search {
+                            min-height: 24px;
+                            width: 97%;
+                            border: 1px solid #e1e4e8;
+                            background: transparent;
+                            padding: 5px 0px 5px 1.5%;
+                            color: #24292e;
+                            border-radius: 6px;
+                            font-weight: 500;
+                            font-size: 15px;
+                        }
+
+                        ::placeholder {
+                            color: #6a737d;
+                            opacity: 0.9;
+
+                        }
+
+                        :-ms-input-placeholder {
+                            color: #fff;
+                            opacity: 0.8;
+                        }
+
+                        ::-ms-input-placeholder {
+                            color: #fff;
+                            opacity: 0.8;
+                        }
+
+                        .search:focus {
+                            outline: none;
+                        }
+
+                    }
+
+                    .resultsnumber {
+                       
+                        p {
+                            margin: 0px;
+                            margin-top: 16px;
+                            color: #24292e;
+                            width: fit-content;
+                            border-bottom: 1px solid #e1e4e8;
+                            padding-bottom: 16px;
+                        
+                            strong {
+                                opacity: 0.9;
+                            }
+                        }
+                    }
+                }
 
             }
         }
