--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -457,3 +457,95 @@ body {
 .bodymain .datasect .reposect .repositry .inputdiv .resultsnumber p strong {
   opacity: 0.9;
 }
+.bodymain .datasect .reposect .repositry .repolist .repo {
+  border-bottom: 1px solid #e1e4e8;
+  padding-bottom: 12px;
+  display: flex;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+.bodymain .datasect .reposect .repositry .repolist .repo .details {
+  width: 72%;
+}
+.bodymain .datasect .reposect .repositry .repolist .repo .details .name h3 {
+  margin: 0px;
+  margin-bottom: 10px;
+}
+.bodymain .datasect .reposect .repositry .repolist .repo .details .name h3 a {
+  color: #0366d6;
+  text-decoration: none;
+}
+.bodymain .datasect .reposect .repositry .repolist .repo .details .name h3 a:hover {
+  text-decoration: underline;
+}
+.bodymain .datasect .reposect .repositry .repolist .repo .details .description {
+  padding-right: 24px;
+  margin-bottom: 16px;
+}
+.bodymain .datasect .reposect .repositry .repolist .repo .details .description p {
+  width: 80%;
+  color: #586069;
+  font-size: 14px;
+  margin: 0px;
+}
+@media only screen and (max-width: 771px) {
+  .bodymain .datasect .reposect .repositry .repolist .repo .details .description p {
+    width: 100%;
+    font-size: 13px;
+  }
+}
+.bodymain .datasect .reposect .repositry .repolist .repo .details .repodatas {
+  font-size: 14px;
+}
+.bodymain .datasect .reposect .repositry .repolist .repo .details .repodatas .reponame {
+  margin-right: 8px;
+  color: #586069;
+}
+.bodymain .datasect .reposect .repositry .repolist .repo .details .repodatas .reponame .colorss {
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+}
+.bodymain .datasect .reposect .repositry .repolist .repo .details .repodatas .reponame .repo-color--php {
+  background-color: #4F5D95;
+}
+.bodymain .datasect .reposect .repositry .repolist .repo .details .repodatas .detss {
+  margin-right: 8px;
+  color: #586069;
+}
+.bodymain .datasect .reposect .repositry .repolist .repo .details .repodatas .detss img {
+  width: 12px;
+  height: 12px;
+  margin-right: 5px;
+}
+.bodymain .datasect .reposect .repositry .repolist .repo .details .repodatas .detss span {
+  font-size: 14px;
+}
+.bodymain .datasect .reposect .repositry .repolist .repo .buttons {
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.bodymain .datasect .reposect .repositry .repolist .repo .buttons .starbutton {
+  color: #24292e;
+  background-color: #fafbfc;
+  border-color: rgba(27, 31, 35, 0.15);
+  padding: 3px 12px;
+  font-size: 12px;
+  line-height: 20px;
+  white-space: nowrap;
+  cursor: pointer;
+  display: flex;
+  border-radius: 6px;
+}
+.bodymain .datasect .reposect .repositry .repolist .repo .buttons .starbutton img {
+  width: 15px;
+  margin-right: 5px;
+}
+.bodymain .datasect .reposect .repositry .repolist .repo .buttons .starbutton span {
+  font-weight: 500;
+}
