--- a/public/styles/profile.scss
+++ b/public/styles/profile.scss
@@ -372,7 +372,7 @@ body {
 
         .tabsdiv {
             margin-top: 24px;
-          
+
             border-bottom: 2px solid #eaecef;
             box-sizing: border-box;
 
@@ -511,17 +511,21 @@ body {
 
             .repositry {
                 width: 72%;
+
                 @media only screen and (max-width: 771px) {
-                    width:100%;
+                    width: 100%;
                     padding: 0px 16px;
                 }
+
                 .inputdiv {
                     margin-top: 16px;
                     margin-bottom: 16px;
+
                     .findrepo {
                         width: 100%;
                         border-bottom: 1px solid #e1e4e8;
                         padding-bottom: 10px;
+
                         .search {
                             min-height: 24px;
                             width: 97%;
@@ -557,7 +561,7 @@ body {
                     }
 
                     .resultsnumber {
-                       
+
                         p {
                             margin: 0px;
                             margin-top: 16px;
@@ -565,9 +569,131 @@ body {
                             width: fit-content;
                             border-bottom: 1px solid #e1e4e8;
                             padding-bottom: 16px;
-                        
+
                             strong {
                                 opacity: 0.9;
+                            }
+                        }
+                    }
+                }
+
+                .repolist {
+                    .repo {
+
+                        // border-top: 1px solid #e1e4e8;
+                        border-bottom: 1px solid #e1e4e8;
+                      padding-bottom: 12px;
+                        display: flex;
+                        padding-top: 24px;
+                        padding-bottom: 24px;
+                        .details {
+                            width: 72%;
+                            .name {
+                                h3 {
+                                    margin: 0px;
+                                    margin-bottom: 10px;
+                                    a {
+                                        color: #0366d6;
+                                        text-decoration: none;
+                                    }
+
+                                    a:hover {
+
+                                        text-decoration: underline;
+                                    }
+                                }
+                            }
+
+                            .description {
+                                padding-right: 24px;
+                                margin-bottom: 16px;
+                                p{
+                                    width: 80%;
+                                    color: #586069;
+                                    font-size: 14px;
+                                    margin: 0px;
+                                    @media only screen and (max-width: 771px) {
+                                        width: 100%;
+                                        font-size: 13px;
+                                    }
+                                }
+
+             
+                            }
+
+                            .repodatas {
+                                font-size: 14px;
+
+                                .reponame {
+                                    margin-right: 8px;
+                                    color: #586069;
+                                    .colorss {
+                                        position: relative;
+                                        top: 1px;
+                                        display: inline-block;
+                                        width: 12px;
+                                        height: 12px;
+                                        border-radius: 50%;
+                                    }
+
+                                    .repo-color {
+
+
+                                        &--php {
+
+                                            background-color: #4F5D95;
+                                        }
+                                    }
+                                }
+
+                                .detss {
+                                    margin-right: 8px;
+                                    color: #586069;
+
+                                    img {
+                                        width: 12px;
+                                        height: 12px;
+                                        margin-right: 5px;
+                                    }
+
+                                    span {
+                                        font-size: 14px;
+                                    }
+                                }
+
+                                .lastupdate {}
+                            }
+                        }
+
+                        .buttons {
+                            width: 25%;
+                            display: flex;
+                            align-items: center;
+                            justify-content: flex-end;
+
+                            .starbutton {
+                                color: #24292e;
+                                background-color: #fafbfc;
+                                border-color: rgb(27 31 35 / 15%);
+                                padding: 3px 12px;
+                                font-size: 12px;
+                                line-height: 20px;
+
+                                white-space: nowrap;
+                                cursor: pointer;
+                                display: flex;
+                                border-radius: 6px;
+
+                                img {
+
+                                    width: 15px;
+                                    margin-right: 5px;
+                                }
+
+                                span {
+                                    font-weight: 500;
+                                }
+
                             }
                         }
                     }
