--- a/public/styles/profile.scss
+++ b/public/styles/profile.scss
@@ -533,7 +533,7 @@ body {
             margin-left: auto;
             margin-right: auto;
             max-width: 1280px;
-
+            margin-bottom: 60px;
             .profiledata {
                 @media only screen and (max-width: 771px) {
                     display: none;
@@ -545,6 +545,13 @@ body {
                 // margin-right: 3%;
 
 
+                .imgloader{
+                    z-index: 7;
+                    /* width: 300px; */
+                    height: 300px;
+                    width: 100%;
+                    border-radius: 100%;
+                }
                 .userdetails {
                     display: flex;
                     align-items: center;
@@ -601,14 +608,15 @@ body {
                 .inputdiv {
                     margin-top: 16px;
                     margin-bottom: 16px;
-
+                   
                     .findrepo {
                         width: 100%;
-                        border-bottom: 1px solid #e1e4e8;
+                        // border-bottom: 1px solid #e1e4e8;
                         padding-bottom: 10px;
 
 
                         .search {
+                            display: none;
                             min-height: 24px;
                             width: 97%;
                             border: 1px solid #e1e4e8;
@@ -618,6 +626,7 @@ body {
                             border-radius: 6px;
                             font-weight: 500;
                             font-size: 15px;
+                        
                         }
 
                         ::placeholder {
@@ -660,14 +669,22 @@ body {
                 }
 
                 .repolist {
+                    .repoloader{
+                        width: 100%;
+                        height: 200px;
+                        border-radius: 10px;
+                    }
+                    .mt{
+                        margin-top: 20px;
+                    }
                     .repo {
 
                         // border-top: 1px solid #e1e4e8;
-                        border-bottom: 1px solid #e1e4e8;
+                        border-top: 1px solid #e1e4e8;
                         padding-bottom: 12px;
                         display: flex;
-                        padding-top: 24px;
-                        padding-bottom: 24px;
+                        padding-top: 28px;
+                        padding-bottom: 28px;
 
                         .details {
                             width: 72%;
@@ -799,3 +816,36 @@ body {
     }
 
 }
+
+
+.loading { 
+    position: relative; 
+    background-color: #e2e2e2; 
+} 
+
+/* The moving element */
+.loading::after { 
+    display: block; 
+    content: ""; 
+    position: absolute; 
+    width: 100%; 
+    height: 100%; 
+    transform: translateX(-100%); 
+    background: -webkit-gradient(linear, left top, 
+                right top, from(transparent),  
+                color-stop(rgba(255, 255, 255, 0.2)), 
+                to(transparent)); 
+                  
+    background: linear-gradient(90deg, transparent, 
+            rgba(255, 255, 255, 0.2), transparent); 
+
+    /* Adding animation */
+    animation: loading 0.8s infinite; 
+} 
+
+/* Loading Animation */
+@keyframes loading { 
+    100% { 
+        transform: translateX(100%); 
+    } 
+} 
