--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -89,6 +89,8 @@ body {
   border-top: 1px solid #ffffff26;
   padding: 8px 0px;
   font-weight: 600;
+  display: flex;
+  align-items: center;
 }
 .bodymain #mobilenav .droplist .listitem a {
   margin: 0px;
@@ -104,6 +106,9 @@ body {
 }
 .bodymain #mobilenav .droplist .listitem .avatar span {
   margin-left: 5px;
+}
+.bodymain #mobilenav .droplist .listitem svg {
+  margin-right: 5px;
 }
 .bodymain #mainnav {
   padding: 16px;
@@ -178,6 +183,12 @@ body {
   align-items: center;
   cursor: pointer;
 }
+.bodymain #mainnav .header-right .icondivv .webuserimageloader {
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  overflow: hidden;
+}
 .bodymain #mainnav .header-right .icondivv .headericon {
   font-size: 24px;
   color: white;
@@ -251,6 +262,7 @@ body {
   left: -10px;
 }
 .bodymain .datasect #mobilename {
+  margin-top: 10px;
   padding: 0px 16px;
   margin-bottom: 20px;
 }
@@ -258,6 +270,11 @@ body {
   .bodymain .datasect #mobilename {
     display: none;
   }
+}
+.bodymain .datasect #mobilename .loadingimg {
+  width: 75px;
+  height: 75px;
+  border-radius: 100%;
 }
 .bodymain .datasect #mobilename .userdetails {
   display: flex;
@@ -275,6 +292,10 @@ body {
   margin-left: 5%;
   width: 75%;
   overflow: hidden;
+}
+.bodymain .datasect #mobilename .userdetails .username .usernameloader {
+  width: 100%;
+  height: 100%;
 }
 .bodymain .datasect #mobilename .userdetails .username .name {
   line-height: 1.25;
