--- a/public/styles/profile.scss
+++ b/public/styles/profile.scss
@@ -71,7 +71,7 @@ body {
         .headerinput {
             margin: 10px 0px;
             width: 95%;
-            padding:2px 2% 5px 2%;
+            padding: 2px 2% 5px 2%;
             border: 1px solid #444d56;
             border-radius: 5px;
             display: flex;
@@ -115,6 +115,8 @@ body {
                 border-top: 1px solid #ffffff26;
                 padding: 8px 0px;
                 font-weight: 600;
+                display: flex;
+                align-items: center;
 
                 a {
                     margin: 0px;
@@ -135,6 +137,10 @@ body {
                     span {
                         margin-left: 5px;
                     }
+                }
+
+                svg {
+                    margin-right: 5px;
                 }
 
                 .signout {}
@@ -236,6 +242,14 @@ body {
                 justify-content: center;
                 align-items: center;
                 cursor: pointer;
+
+                .webuserimageloader {
+                    width: 20px;
+                    height: 20px;
+                    border-radius: 100%;
+                    overflow: hidden;
+
+                }
 
                 .headericon {
                     font-size: 24px;
@@ -347,6 +361,14 @@ body {
                 display: none;
             }
 
+            margin-top: 10px;
+
+            .loadingimg {
+                width: 75px;
+                height: 75px;
+                border-radius: 100%;
+            }
+
             padding: 0px 16px;
 
             margin-bottom: 20px;
@@ -355,6 +377,8 @@ body {
                 display: flex;
                 align-items: center;
                 margin-bottom: 15px;
+
+
 
                 .userdp {
                     width: 20%;
@@ -369,6 +393,11 @@ body {
                     margin-left: 5%;
                     width: 75%;
                     overflow: hidden;
+
+                    .usernameloader {
+                        width: 100%;
+                        height: 100%;
+                    }
 
                     .name {
                         line-height: 1.25;
@@ -534,6 +563,7 @@ body {
             margin-right: auto;
             max-width: 1280px;
             margin-bottom: 60px;
+
             .profiledata {
                 @media only screen and (max-width: 771px) {
                     display: none;
@@ -545,13 +575,14 @@ body {
                 // margin-right: 3%;
 
 
-                .imgloader{
+                .imgloader {
                     z-index: 7;
                     /* width: 300px; */
                     height: 300px;
                     width: 100%;
                     border-radius: 100%;
                 }
+
                 .userdetails {
                     display: flex;
                     align-items: center;
@@ -608,7 +639,7 @@ body {
                 .inputdiv {
                     margin-top: 16px;
                     margin-bottom: 16px;
-                   
+
                     .findrepo {
                         width: 100%;
                         // border-bottom: 1px solid #e1e4e8;
@@ -626,7 +657,7 @@ body {
                             border-radius: 6px;
                             font-weight: 500;
                             font-size: 15px;
-                        
+
                         }
 
                         ::placeholder {
@@ -669,14 +700,16 @@ body {
                 }
 
                 .repolist {
-                    .repoloader{
+                    .repoloader {
                         width: 100%;
                         height: 200px;
                         border-radius: 10px;
                     }
-                    .mt{
+
+                    .mt {
                         margin-top: 20px;
                     }
+
                     .repo {
 
                         // border-top: 1px solid #e1e4e8;
@@ -818,34 +851,34 @@ body {
 }
 
 
-.loading { 
-    position: relative; 
-    background-color: #e2e2e2; 
-} 
+.loading {
+    position: relative;
+    background-color: #e2e2e2;
+}
 
 /* The moving element */
-.loading::after { 
-    display: block; 
-    content: ""; 
-    position: absolute; 
-    width: 100%; 
-    height: 100%; 
-    transform: translateX(-100%); 
-    background: -webkit-gradient(linear, left top, 
-                right top, from(transparent),  
-                color-stop(rgba(255, 255, 255, 0.2)), 
-                to(transparent)); 
-                  
-    background: linear-gradient(90deg, transparent, 
-            rgba(255, 255, 255, 0.2), transparent); 
+.loading::after {
+    display: block;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform: translateX(-100%);
+    background: -webkit-gradient(linear, left top,
+            right top, from(transparent),
+            color-stop(rgba(255, 255, 255, 0.2)),
+            to(transparent));
+
+    background: linear-gradient(90deg, transparent,
+            rgba(255, 255, 255, 0.2), transparent);
 
     /* Adding animation */
-    animation: loading 0.8s infinite; 
-} 
+    animation: loading 0.8s infinite;
+}
 
 /* Loading Animation */
-@keyframes loading { 
-    100% { 
-        transform: translateX(100%); 
-    } 
-} 
+@keyframes loading {
+    100% {
+        transform: translateX(100%);
+    }
+}
